--- a/notebooks/java/senzing-G2Engine-sdk-api-specification.ipynb
+++ b/notebooks/java/senzing-G2Engine-sdk-api-specification.ipynb
@@ -389,7 +389,7 @@
     "StringBuffer response = new StringBuffer();\n",
     "\n",
     "g2engine.exportConfig(response, configID);\n",
-    "System.out.print(\"Config ID: \"+configID.getValue());"
+    "RenderJSON(response)"
    ]
   },
   {
@@ -616,6 +616,50 @@
     "    System.out.print(g2engine.getLastException());\n",
     "else\n",
     "    RenderJSON(response);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### addRecordWithInfoWithReturnedRecordID\n",
+    "\n",
+    "\n",
+    "###### Parameters\n",
+    "\n",
+    "- **dataSourceCode:** (str) The name of the data source the record is associated\n",
+    "  with.  This value is configurable to the system.\n",
+    "- **jsonData:** (str) A JSON document with the attribute data for the record\n",
+    "- **loadID:** (str) the observation load ID for the record;\n",
+    "  value can be null.\n",
+    "- **g2EngineFlags:** (long) Control flags for specifying what data about the\n",
+    "  entity to retrieve\n",
+    "- **recordResponse:** (StringBuffer) The record ID of the added record.\n",
+    "- **response:** (StringBuffer) Object to store the output of the method. Can be used to print or store for later."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "StringBuffer response = new StringBuffer();\n",
+    "StringBuffer recordResponse = new StringBuffer();\n",
+    "\n",
+    "int return_code = g2engine.addRecordWithInfoWithReturnedRecordID(\n",
+    "                    dataSourceCode, \n",
+    "                    jsonData,\n",
+    "                    loadID,\n",
+    "                    g2EngineFlags,\n",
+    "                    recordResponse,   \n",
+    "                    response);\n",
+    "\n",
+    "if(return_code!=0)\n",
+    "    System.out.print(g2engine.getLastException());\n",
+    "else\n",
+    "    System.out.print(record_response);\n",
+    "    RenderJSON(response)"
    ]
   },
   {
@@ -1289,6 +1333,48 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### processRedoRecordWithInfo\n",
+    "\n",
+    "`processRedoRecordWithInfo()` is available if you would like to know what\n",
+    "resolved entities were modified when processing a redo record.\n",
+    "It behaves identically to `processRedoRecord()`,\n",
+    "but also returns a json document containing the IDs of the affected entities.\n",
+    "It accepts the following parameters:\n",
+    "\n",
+    "###### Parameters\n",
+    "\n",
+    "- **g2EngineFlags:** (long) Control flags for specifying what data about the\n",
+    "- **info:** (StringBuffer) Returns the \"withInfo\" section \n",
+    "- **response:** (StringBuffer) Object to store the output of the method. Can be used to print or store for later."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "StringBuffer response = new StringBuffer();\n",
+    "StringBuffer info = new StringBuffer();\n",
+    "\n",
+    "int return_code = g2engine.processRedoRecordWithInfo(\n",
+    "    g2EngineFlags,\n",
+    "    info,\n",
+    "    response);\n",
+    "\n",
+    "if(return_code!=0)\n",
+    "    System.out.print(g2engine.getLastException());\n",
+    "else\n",
+    "    RenderJSON(response);\n",
+    "    RenderJSON(info)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Delete"
    ]
   },
@@ -1554,7 +1640,7 @@
     "###### Parameters\n",
     "\n",
     "- **entityID:** (long) The numeric ID of a resolved entity\n",
-    "- **response:** (bytearray) Object to store the output of the method. Can be used to print or store for later. **Warning:** This is not a *string*"
+    "- **response:** (StringBuffer) Object to store the output of the method. Can be used to print or store for later"
    ]
   },
   {
@@ -1588,7 +1674,7 @@
     "###### Parameters\n",
     "\n",
     "- **jsonData:** (str) A JSON document with the attribute data to search for.\n",
-    "- **response:** (bytearray) Object to store the output of the method. Can be used to print or store for later. **Warning:** This is not a *string*\n",
+    "- **response:** (StringBuffer) Object to store the output of the method. Can be used to print or store for later\n",
     "- **g2EngineFlags:** (long) Operational flags"
    ]
   },
@@ -1603,6 +1689,38 @@
     "StringBuffer response = new StringBuffer();\n",
     "\n",
     "int return_code = g2engine.searchByAttributes(jsonData, g2EngineFlags, response);\n",
+    "\n",
+    "if(return_code!=0)\n",
+    "    System.out.print(g2engine.getLastException());\n",
+    "else\n",
+    "    RenderJSON(response);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### getVirtualEntityByRecordID\n",
+    "\n",
+    "###### Parameters\n",
+    "\n",
+    "- **records:** (str) A JSON document with the datasource codes and recordID's of the records to check against\n",
+    "- **response:** (StringBuffer) Object to store the output of the method. Can be used to print or store for later"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "StringBuffer response = new StringBuffer();\n",
+    "String records =  \"{\\\"RECORDS\\\": [{\\\"DATA_SOURCE\\\": \\\"\"+dataSourceCode1+\"\\\", \\\"RECORD_ID\\\": \\\"\"+recordID1+\"\\\"}, {\\\"DATA_SOURCE\\\": \\\"\"+dataSourceCode2+\"\\\", \\\"RECORD_ID\\\": \\\"\"+recordID2+\"\\\"}]}\";\n",
+    "\n",
+    "int return_code = g2engine.getVirtualEntityByRecordID(\n",
+    "                            records,\n",
+    "                            response);\n",
+    "\n",
     "if(return_code!=0)\n",
     "    System.out.print(g2engine.getLastException());\n",
     "else\n",
@@ -1741,7 +1859,7 @@
     "- **entityIDStart:** (int) The entity ID for the starting entity of the search path\n",
     "- **entityIDEnd:** (int) The entity ID for the ending entity of the search path\n",
     "- **maxDegree:** (int) The number of relationship degrees to search\n",
-    "- **response:** (bytearray) Object to store the output of the method. Can be used to print or store for later. **Warning:** This is not a *string*\n",
+    "- **response:** (StringBuffer) Object to store the output of the method. Can be used to print or store for later\n",
     "- **g2EngineFlags:** (long) Control flags for specifying what data about the entity to retrieve\n",
     "\n",
     "The functions return a JSON document that identifies the path between the\n",
@@ -1866,7 +1984,7 @@
     "- **maxDegree:** (int) The number of relationship degrees to search\n",
     "- **excludedEntities:** (str) Entities that should be avoided on the path\n",
     "  (JSON document)\n",
-    "- **response:** (bytearray) Object to store the output of the method. Can be used to print or store for later. **Warning:** This is not a *string*\n",
+    "- **response:** (StringBuffer) Object to store the output of the method. Can be used to print or store for later\n",
     "- **g2EngineFlags:** (long) Operational flags"
    ]
   },
@@ -1997,7 +2115,7 @@
     "  (JSON document)\n",
     "- **requiredDsrcs:** (str) Entities that should be avoided on the path\n",
     "  (JSON document)\n",
-    "- **response:** (bytearray) Object to store the output of the method. Can be used to print or store for later. **Warning:** This is not a *string*\n",
+    "- **response:** (StringBuffer) Object to store the output of the method. Can be used to print or store for later\n",
     "- **g2EngineFlags:** (long) Operational flags\n"
    ]
   },
@@ -2060,7 +2178,7 @@
     "  (JSON document)\n",
     "- **requiredDsrcs:** (str) Entities that should be avoided on the path\n",
     "  (JSON document)\n",
-    "- **response:** (bytearray) Object to store the output of the method. Can be used to print or store for later. **Warning:** This is not a *string*\n",
+    "- **response:** (StringBuffer) Object to store the output of the method. Can be used to print or store for later\n",
     "- **g2EngineFlags:** (long) Operational flags\n"
    ]
   },
@@ -2145,7 +2263,7 @@
     "  each search entity\n",
     "- **maxEntities:** (int) The maximum number of entities to return in the\n",
     "  discovered network\n",
-    "- **response:** (bytearray) Object to store the output of the method. Can be used to print or store for later. **Warning:** This is not a *string*\n",
+    "- **response:** (StringBuffer) Object to store the output of the method. Can be used to print or store for later\n",
     "\n",
     "The functions return a JSON document that identifies the path between the\n",
     "each set of search entities (if the path exists), and the information on the\n",
@@ -2199,7 +2317,7 @@
     "  each search entity\n",
     "- **maxEntities:** (int) The maximum number of entities to return in the\n",
     "  discovered network\n",
-    "- **response:** (bytearray) Object to store the output of the method. Can be used to print or store for later. **Warning:** This is not a *string*\n",
+    "- **response:** (StringBuffer) Object to store the output of the method. Can be used to print or store for later\n",
     "\n",
     "The functions return a JSON document that identifies the path between the\n",
     "each set of search entities (if the path exists), and the information on the\n",
@@ -2243,6 +2361,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### findInterestingEntities\n",
+    "\n",
+    "`findInterestingEntitiesByEntityID` and `findInterestingEntitiesByRecordID` are early adopter features, contact support for their use."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "The `whyEntities()`, `whyRecords()`, `whyEntityByRecordID()`,`whyEntityByEntityID()`, and `howEntityByEntityID()` functions can be used\n",
     "to determine why and how records belong to their resolved entities.\n",
     "These functions will compare the record data within an entity against the\n",
@@ -2254,7 +2381,7 @@
     "- **dataSourceCode:** (str) The data source for the record to be analyzed\n",
     "- **entityID:** (int) The entity ID for the entity to be analyzed\n",
     "- **recordID:** (str) The record ID for the record to be analyzed\n",
-    "- **response:** (bytearray) Object to store the output of the method. Can be used to print or store for later. **Warning:** This is not a *string*\n",
+    "- **response:** (StringBuffer) Object to store the output of the method. Can be used to print or store for later\n",
     "- **g2EngineFlags:** (long) Operational flags\n",
     "\n",
     "The function returns a JSON document that gives the results of the record\n",
@@ -2538,7 +2665,7 @@
     "\n",
     "- **exportHandle:** (long) A long from which resolved entity data may be\n",
     "  read and exported.\n",
-    "- **response:** (bytearray) Object to store the output of the method. Can be used to print or store for later. **Warning:** This is not a *string*"
+    "- **response:** (StringBuffer) Object to store the output of the method. Can be used to print or store for later"
    ]
   },
   {
@@ -2715,7 +2842,7 @@
    "mimetype": "text/x-java-source",
    "name": "Java",
    "pygments_lexer": "java",
-   "version": "11.0.8+10-post-Ubuntu-0ubuntu118.04.1"
+   "version": "11.0.15+10-Ubuntu-0ubuntu0.20.04.1"
   },
   "toc": {
    "base_numbering": 1,
