--- a/notebooks/java/senzing-G2Engine-sdk-api-specification.ipynb
+++ b/notebooks/java/senzing-G2Engine-sdk-api-specification.ipynb
@@ -1279,7 +1279,7 @@
     "\n",
     "###### Parameters\n",
     "\n",
-    "- **response:** (bytearray) the input record to add"
+    "- **response:** (bytearray) the input record to process"
    ]
   },
   {
