--- a/notebooks/python/senzing-G2Engine-sdk-api-specification.ipynb
+++ b/notebooks/python/senzing-G2Engine-sdk-api-specification.ipynb
@@ -1548,7 +1548,7 @@
     "\n",
     "###### Parameters\n",
     "\n",
-    "- **response_bytearray:** (bytearray) the input record to add"
+    "- **response_bytearray:** (bytearray) the input record to process"
    ]
   },
   {
