--- a/notebooks/java/senzing-G2Engine-sdk-api-specification.ipynb
+++ b/notebooks/java/senzing-G2Engine-sdk-api-specification.ipynb
@@ -1305,7 +1305,7 @@
     "This processes the next redo record and returns it\n",
     "(If `processRedoRecord()` \"response\" returns 0\n",
     "and \"response_bytearray\" is blank then there are no more redo records to\n",
-    "process and if you do `count.RedoRecords()` again it will return 0)\n",
+    "process and if you do `countRedoRecords()` again it will return 0)\n",
     "Has potential to create more redo records in certian situations.\n",
     "\n",
     "###### Parameters\n",
@@ -2784,8 +2784,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Purge Repository\n",
-    "To purge the G2 repository, use the aptly named `purgeRepository()` method. This will remove every record in your current repository."
+    "### purgeRepository\n",
+    "\n",
+    "**Before** calling `purgeRepository()` all other instances of the Senzing API (whether in custom code, REST API, stream-loader, redoer, G2Loader, etc) **MUST** be destroyed or shutdown."
    ]
   },
   {
