--- a/notebooks/python/senzing-G2Config-sdk-api-specification.ipynb
+++ b/notebooks/python/senzing-G2Config-sdk-api-specification.ipynb
@@ -60,8 +60,8 @@
     "    def _ipython_display_(self):\n",
     "        display_html('<div id=\"{}\" style=\"height:100%; width:100%; background-color: LightCyan\"></div>'.format(self.uuid), raw=True)\n",
     "        display_javascript(\"\"\"\n",
-    "        require([\"https://rawgit.com/caldwell/print/master/print.js\"], function() {\n",
-    "        document.getElementById('%s').appendChild(print(%s))\n",
+    "        require([\"https://rawgit.com/caldwell/renderjson/master/renderjson.js\"], function() {\n",
+    "        document.getElementById('%s').appendChild(renderjson(%s))\n",
     "        });\n",
     "        \"\"\" % (self.uuid, self.json_str), raw=True)"
    ]
@@ -156,7 +156,7 @@
     "    g2_config.init(module_name, senzing_config_json, verbose_logging)\n",
     "\n",
     "except G2Exception as err:\n",
-    "    print(g2_config.getLastException())"
+    "    print(err)"
    ]
   },
   {
@@ -176,7 +176,7 @@
     "    config_handle = g2_config.create()\n",
     "\n",
     "except G2Exception as err:\n",
-    "    print(g2_config.getLastException())"
+    "    print(err)"
    ]
   },
   {
@@ -202,9 +202,9 @@
     "    g2_config.save(config_handle, response_bytearray)\n",
     "    config_bytearray = response_bytearray\n",
     "except G2Exception as err:\n",
-    "    print(g2_config.getLastException())\n",
+    "    print(err)\n",
     "\n",
-    "print(response_bytearray)"
+    "RenderJSON(response_bytearray)"
    ]
   },
   {
@@ -226,12 +226,13 @@
    "source": [
     "try:\n",
     "    # example using the saved config from the `save()` method\n",
-    "    g2_config.load(config_bytearray)\n",
+    "    config_handle = g2_config.load(config_bytearray)\n",
     "\n",
     "except G2Exception as err:\n",
-    "    print(g2_config.getLastException())\n",
+    "    print(err)\n",
     "\n",
-    "print(config_bytearray)"
+    "print(\"config handle: \" + str(config_handle))\n",
+    "RenderJSON(config_bytearray)"
    ]
   },
   {
@@ -267,9 +268,9 @@
     "    g2_config.listDataSources(config_handle, response_bytearray)\n",
     "\n",
     "except G2Exception as err:\n",
-    "    print(g2_config.getLastException())\n",
+    "    print(err)\n",
     "\n",
-    "print(response_bytearray)"
+    "RenderJSON(response_bytearray)"
    ]
   },
   {
@@ -305,9 +306,9 @@
     "    g2_config.addDataSource(config_handle, datasource_json, response_bytearray)\n",
     "\n",
     "except G2Exception as err:\n",
-    "    print(g2_config.getLastException())\n",
+    "    print(err)\n",
     "\n",
-    "print(response_bytearray)"
+    "RenderJSON(response_bytearray)"
    ]
   },
   {
@@ -337,8 +338,9 @@
     "    g2_config.listDataSources(config_handle, response_bytearray)\n",
     "\n",
     "except G2Exception as err:\n",
-    "    print(g2_config.getLastException())\n",
-    "print(response_bytearray)"
+    "    print(err)\n",
+    "\n",
+    "RenderJSON(response_bytearray)"
    ]
   },
   {
@@ -371,7 +373,7 @@
     "    g2_config.deleteDataSource(config_handle, datasource_json)\n",
     "\n",
     "except G2Exception as err:\n",
-    "    print(g2_config.getLastException())"
+    "    print(err)"
    ]
   },
   {
@@ -379,42 +381,6 @@
    "metadata": {},
    "source": [
     "## Cleanup"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### getLastException"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(g2_config.getLastException())"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### clearLastException"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "try:\n",
-    "    g2_config.clearLastException()\n",
-    "\n",
-    "except G2Exception as err:\n",
-    "    print(g2_config.getLastException())"
    ]
   },
   {
@@ -436,7 +402,7 @@
     "    g2_config.close(config_handle)\n",
     "\n",
     "except G2Exception as err:\n",
-    "    print(g2_config.getLastException())"
+    "    print(err)"
    ]
   },
   {
@@ -456,7 +422,7 @@
     "    g2_config.destroy()\n",
     "\n",
     "except G2Exception as err:\n",
-    "    print(g2_config.getLastException())"
+    "    print(err)"
    ]
   }
  ],
@@ -476,7 +442,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.9.12"
   },
   "toc": {
    "base_numbering": 1,
