--- a/notebooks/python/senzing-G2ConfigMgr-sdk-api-specification.ipynb
+++ b/notebooks/python/senzing-G2ConfigMgr-sdk-api-specification.ipynb
@@ -156,7 +156,7 @@
     "    senzing_model_config_json = response_bytearray.decode()\n",
     "\n",
     "except G2Exception as err:\n",
-    "    print(g2_config.getLastException())\n",
+    "    print(err)\n",
     "\n",
     "RenderJSON(response_bytearray)"
    ]
@@ -216,7 +216,7 @@
     "        verbose_logging)\n",
     "\n",
     "except G2Exception as err:\n",
-    "    print(g2_configuration_manager.getLastException())"
+    "    print(err)"
    ]
   },
   {
@@ -249,7 +249,7 @@
     "        config_id_bytearray)\n",
     "\n",
     "except G2Exception as err:\n",
-    "    print(g2_configuration_manager.getLastException())\n",
+    "    print(err)\n",
     "print(\"Config ID: {0}\".format(config_id_bytearray.decode()))"
    ]
   },
@@ -276,7 +276,7 @@
     "    g2_configuration_manager.getConfigList(response_bytearray)\n",
     "\n",
     "except G2Exception as err:\n",
-    "    print(g2_configuration_manager.getLastException())\n",
+    "    print(err)\n",
     "\n",
     "RenderJSON(response_bytearray)"
    ]
@@ -309,7 +309,7 @@
     "        response_bytearray)\n",
     "\n",
     "except G2Exception as err:\n",
-    "    print(g2_configuration_manager.getLastException())\n",
+    "    print(err)\n",
     "\n",
     "RenderJSON(response_bytearray)"
    ]
@@ -337,7 +337,7 @@
     "    g2_configuration_manager.setDefaultConfigID(config_id_bytearray)\n",
     "\n",
     "except G2Exception as err:\n",
-    "    print(g2_configuration_manager.getLastException())"
+    "    print(err)"
    ]
   },
   {
@@ -363,7 +363,7 @@
     "    g2_configuration_manager.getDefaultConfigID(config_id_bytearray)\n",
     "\n",
     "except G2Exception as err:\n",
-    "    print(g2_configuration_manager.getLastException())\n",
+    "    print(err)\n",
     "print(\"Configuration ID: {0}\".format(config_id_bytearray.decode()))"
    ]
   },
@@ -387,7 +387,7 @@
     "            new_config_id_bytearray)\n",
     "\n",
     "except G2Exception as err:\n",
-    "    print(g2_configuration_manager.getLastException())"
+    "    print(err)"
    ]
   },
   {
@@ -416,7 +416,7 @@
     "    g2_config.close(config_handle)\n",
     "\n",
     "except G2Exception as err:\n",
-    "    print(g2_config.getLastException())"
+    "    print(err)"
    ]
   },
   {
@@ -436,7 +436,7 @@
     "    g2_config.destroy()\n",
     "\n",
     "except G2Exception as err:\n",
-    "    print(g2_config.getLastException())"
+    "    print(err)"
    ]
   }
  ],
