--- a/notebooks/python/senzing-G2Config-sdk-api-specification.ipynb
+++ b/notebooks/python/senzing-G2Config-sdk-api-specification.ipynb
@@ -163,7 +163,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Create configuration handle\n"
+    "### Create configuration handle"
    ]
   },
   {
