--- a/notebooks/python/senzing-G2Product-sdk-api-specification.ipynb
+++ b/notebooks/python/senzing-G2Product-sdk-api-specification.ipynb
@@ -209,7 +209,7 @@
     "        verbose_logging)\n",
     "\n",
     "except G2Exception as err:\n",
-    "    print(g2_product.getLastException())"
+    "    print(err)"
    ]
   },
   {
@@ -235,7 +235,7 @@
     "    response = g2_product.license()\n",
     "\n",
     "except G2Exception as err:\n",
-    "    print(g2_product.getLastException())\n",
+    "    print(err)\n",
     "RenderJSON(response)"
    ]
   },
@@ -262,7 +262,7 @@
     "    response = g2_product.version()\n",
     "\n",
     "except G2Exception as err:\n",
-    "    print(g2_product.getLastException())\n",
+    "    print(err)\n",
     "RenderJSON(response)"
    ]
   },
@@ -289,7 +289,7 @@
     "    ret_code = g2_product.validateLicenseFile(\"/notebooks/senzing-examples/senzing-jupyter-licenses/g2.lic\")\n",
     "\n",
     "except G2Exception as err:\n",
-    "    print(g2_product.getLastException())\n",
+    "    print(err)\n",
     "    \n",
     "print(ret_code)"
    ]
@@ -319,7 +319,7 @@
     "    ret_code = g2_product.validateLicenseStringBase64(license_string)\n",
     "\n",
     "except G2Exception as err:\n",
-    "    print(g2_product.getLastException())\n",
+    "    print(err)\n",
     "    \n",
     "print(ret_code)"
    ]
