--- a/notebooks/python/senzing-init-config.ipynb
+++ b/notebooks/python/senzing-init-config.ipynb
@@ -133,7 +133,7 @@
     "        verbose_logging)\n",
     "\n",
     "except G2Exception as err:\n",
-    "    print(g2_configuration_manager.getLastException())"
+    "    print(err)"
    ]
   },
   {
@@ -179,7 +179,7 @@
     "            senzing_model_config_str = response_bytearray.decode()\n",
     "\n",
     "        except G2Exception as err:\n",
-    "            print(g2_config.getLastException())\n",
+    "            print(err)\n",
     "\n",
     "        # Externalize Senzing configuration to the database.\n",
     "\n",
@@ -195,10 +195,10 @@
     "\n",
     "            g2_configuration_manager.setDefaultConfigID(config_id_bytearray)\n",
     "        except G2Exception as err:\n",
-    "            print(g2_configuration_manager.getLastException())\n",
+    "            print(err)\n",
     "\n",
     "except G2Exception as err:\n",
-    "    print(g2_configuration_manager.getLastException())"
+    "    print(err)"
    ]
   }
  ],
@@ -218,7 +218,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.9.12"
   },
   "toc": {
    "base_numbering": 1,
