#29 add G2Config descriptions

--- a/notebooks/java/senzing-G2Config-sdk-api-specification.ipynb
+++ b/notebooks/java/senzing-G2Config-sdk-api-specification.ipynb
@@ -225,7 +225,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Create Configuration handle"
+    "### Create Configuration handle\n",
+    "`create()` creates an in-memory handle for an editable configuration document.  It does so by pulling from the default template config document, stored in the product installation."
    ]
   },
   {
@@ -251,6 +252,7 @@
    "metadata": {},
    "source": [
     "### save\n",
+    "`save()` takes an in-memory handle for an editable configuration document, and exports it as a string through the function parameters.\n",
     "\n",
     "###### Parameters\n",
     "\n",
@@ -279,6 +281,7 @@
    "metadata": {},
    "source": [
     "### load\n",
+    "`load()` creates an in-memory handle for an editable configuration document. It does so by loading the config document, provided as an input parameter string.\n",
     "\n",
     "###### Parameters\n",
     "\n",
@@ -309,7 +312,7 @@
    "source": [
     "### listDataSources\n",
     "\n",
-    "Call G2Config's `listDataSources()` method and pretty-print results.\n",
+    "`listDataSources()` returns a list of data sources contained in an in-memory handle for an editable configuration document\n",
     "\n",
     "###### Parameters\n",
     "\n",
@@ -339,7 +342,7 @@
    "source": [
     "### addDataSource\n",
     "\n",
-    "Call G2Config's `addDataSource()` method and pretty-prints results.\n",
+    "`addDataSource()` adds a new data source to an in-memory handle for an editable configuration document\n",
     "\n",
     "###### Parameters\n",
     "\n",
@@ -401,7 +404,7 @@
    "source": [
     "### deleteDataSource\n",
     "\n",
-    "Call G2Config's `deleteDataSource()` method and pretty-print results.\n",
+    "`deleteDataSource()` removes a data source from an in-memory handle for an editable configuration document\n",
     "\n",
     "###### Parameters\n",
     "\n",
@@ -434,44 +437,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### getLastException"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
-    "System.out.print(g2config.getLastException());"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### clearLastException"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
-    "g2config.clearLastException();"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### close\n",
+    "`close()` deletes an in-memory handle for an editable configuration document, and frees it’s internal memory resources.\n",
     "\n",
+    "**Parameters**\n",
     "- **configHandle:** (long) the handle of the config object to get the config json data from"
    ]
   },
