--- a/notebooks/python/senzing-G2Config-sdk-api-specification.ipynb
+++ b/notebooks/python/senzing-G2Config-sdk-api-specification.ipynb
@@ -163,7 +163,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Create configuration handle"
+    "### Create configuration handle\n",
+    "`create()` creates an in-memory handle for an editable configuration document.  It does so by pulling from the default template config document, stored in the product installation."
    ]
   },
   {
@@ -184,7 +185,7 @@
    "metadata": {},
    "source": [
     "### save\n",
-    "\n",
+    "`save()` takes an in-memory handle for an editable configuration document, and exports it as a string through the function parameters.\n",
     "###### Parameters\n",
     "\n",
     "- **config_handle:** (int) the handle of the config object to get the config json data from\n",
@@ -212,7 +213,7 @@
    "metadata": {},
    "source": [
     "### load\n",
-    "\n",
+    "`load()` creates an in-memory handle for an editable configuration document. It does so by loading the config document, provided as an input parameter string.\n",
     "###### Parameters\n",
     "\n",
     "- **config_bytearray:** (bytearray) the config data to load into the config handle."
@@ -248,8 +249,7 @@
    "source": [
     "### listDataSources\n",
     "\n",
-    "Call G2Config's `listDataSources()` method and pretty-printsresults.\n",
-    "\n",
+    "`listDataSources()` returns a list of data sources contained in an in-memory handle for an editable configuration document\n",
     "###### Parameters\n",
     "\n",
     "- **config_handle:** (int) the handle of the config object to get the config json data from\n",
@@ -279,8 +279,7 @@
    "source": [
     "### addDataSource\n",
     "\n",
-    "Call G2Config's `addDataSource()` method and pretty-prints results.\n",
-    "\n",
+    "`addDataSource()` adds a new data source to an in-memory handle for an editable configuration document\n",
     "###### Parameters\n",
     "\n",
     "- **config_handle:** (int) the handle of the config object to get the config json data from\n",
@@ -349,8 +348,7 @@
    "source": [
     "### deleteDataSource\n",
     "\n",
-    "Call G2Config's `deleteDataSource()` method and pretty-prints results.\n",
-    "\n",
+    "`deleteDataSource()` removes a data source from an in-memory handle for an editable configuration document\n",
     "###### Parameters\n",
     "\n",
     "- **config_handle:** (int) the handle of the config object to get the config json data from\n",
@@ -389,6 +387,9 @@
    "source": [
     "### close\n",
     "\n",
+    "`close()` deletes an in-memory handle for an editable configuration document, and frees it’s internal memory resources.\n",
+    "\n",
+    "**Parameters**\n",
     "- **config_handle:** (int) the handle of the config object to get the config json data from"
    ]
   },
