#34 show proper usage of flags

--- a/notebooks/python/senzing-G2Engine-sdk-api-specification.ipynb
+++ b/notebooks/python/senzing-G2Engine-sdk-api-specification.ipynb
@@ -452,7 +452,7 @@
    "source": [
     "from senzing import G2EngineFlags\n",
     "\n",
-    "g2_engine_record_flags = G2EngineFlags.G2_RECORD_DEFAULT_FLAGS\n",
+    "g2_engine_example_flag = G2EngineFlags.G2_ENTITY_INCLUDE_ENTITY_NAME\n",
     "\n",
     "load_id = None\n",
     "response_bytearray = bytearray()\n",
@@ -473,14 +473,18 @@
     "flags_example_data_as_json = json.dumps(flags_example_data)\n",
     "\n",
     "try:\n",
-    "    g2_engine.addRecordWithInfo(\n",
+    "    g2_engine.addRecord(\n",
     "        flags_example_datasource_code,\n",
     "        flags_example_record_id,\n",
     "        flags_example_data_as_json,\n",
-    "        response_bytearray,\n",
-    "        load_id,\n",
-    "        g2_engine_record_flags)\n",
+    "        load_id)\n",
     "\n",
+    "    g2_engine.getEntityByRecordID(\n",
+    "        flags_example_datasource_code,\n",
+    "        flags_example_record_id,\n",
+    "        response_bytearray,\n",
+    "        g2_engine_example_flag)\n",
+    "    \n",
     "except G2Exception as err:\n",
     "    print(err)\n",
     "RenderJSON(response_bytearray)"
@@ -2801,12 +2805,14 @@
    "outputs": [],
    "source": [
     "response_bytearray = bytearray()\n",
+    "g2_engine_why_flags = G2EngineFlags.G2_INCLUDE_FEATURE_SCORES\n",
     "\n",
     "try:\n",
     "    g2_engine.whyEntities(\n",
     "        entity_id_1,\n",
     "        entity_id_2,\n",
-    "        response_bytearray)\n",
+    "        response_bytearray,\n",
+    "        g2_engine_why_flags)\n",
     "\n",
     "except G2Exception as err:\n",
     "    print(err)\n",
@@ -2847,7 +2853,8 @@
     "        record_id_1,\n",
     "        datasource_code_2,\n",
     "        record_id_2,\n",
-    "        response_bytearray)\n",
+    "        response_bytearray,\n",
+    "        g2_engine_why_flags)\n",
     "\n",
     "except G2Exception as err:\n",
     "    print(err)\n",
@@ -2882,7 +2889,8 @@
     "    g2_engine.whyEntityByRecordID(\n",
     "        datasource_code_1,\n",
     "        record_id_1,\n",
-    "        response_bytearray)\n",
+    "        response_bytearray,\n",
+    "        g2_engine_why_flags)\n",
     "\n",
     "except G2Exception as err:\n",
     "    print(err)\n",
@@ -2914,7 +2922,8 @@
     "    entity_id = entity_id_1\n",
     "    g2_engine.whyEntityByEntityID(\n",
     "        entity_id,\n",
-    "        response_bytearray)\n",
+    "        response_bytearray,\n",
+    "        g2_engine_why_flags)\n",
     "\n",
     "except G2Exception as err:\n",
     "    print(err)\n",
@@ -3252,7 +3261,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.4"
   },
   "toc": {
    "base_numbering": 1,
