#34 update flags description

--- a/notebooks/python/senzing-G2Engine-sdk-api-specification.ipynb
+++ b/notebooks/python/senzing-G2Engine-sdk-api-specification.ipynb
@@ -441,7 +441,7 @@
    "metadata": {},
    "source": [
     "### Flags\n",
-    "flags are optional parameters that specify what data about an entity or record to retrive. If no flag parameter is given then the default flags are used, and this will be the practice throughout this notebook but an example is give below"
+    "flags are optional parameters that specify what data about an entity or record to retrive. If no flag parameter is given then the default flags are used, and this will be the practice throughout most of this notebook, however, an example is given below"
    ]
   },
   {
